<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/showAllExpiryDatesPopUp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="50dp"
    android:background="@color/primary_theme"
    android:backgroundTint="#0DFFFFFF"
    android:paddingHorizontal="20dp"
    android:paddingVertical="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:id="@+id/home_product_expiry_dates">

        <TextView
            android:id="@+id/home_product_expiry_dates_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:text="Product Name"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">

            <ImageButton
                android:id="@+id/sortExpiryDateAscendingBtn"
                android:layout_width="48sp"
                android:layout_height="48sp"
                android:background="?attr/selectableItemBackground"
                app:srcCompat="@drawable/icon_calendar_up" />

            <ImageButton
                android:id="@+id/sortExpiryDateDescendingBtn"
                android:layout_width="48sp"
                android:layout_height="48sp"
                android:background="?attr/selectableItemBackground"
                app:srcCompat="@drawable/icon_calendar_down" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/home_product_life_time_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_semibold"
        android:layout_below="@id/home_product_expiry_dates"
        android:text="Home Product Life Time"
        android:textSize="18sp" />

    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_below="@id/home_product_life_time_info"
        android:layout_marginVertical="10dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/close_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/list_view"
        android:layout_alignParentEnd="true"
        android:background="@color/secondary_theme"
        android:fontFamily="@font/inter_semibold"
        android:text="CLOSE"
        android:textColor="@color/primary_theme">

    </androidx.appcompat.widget.AppCompatButton>

</RelativeLayout>