<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/homeProductName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semibold"
                android:padding="10sp"
                android:text="Apple"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/removeStockQuantity"
                android:layout_width="48sp"
                android:layout_height="48sp"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/remove_stock_quantity"
                android:src="@drawable/icon_remove" />

            <TextView
                android:id="@+id/homeProductStockQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semibold"
                android:padding="10sp"
                android:text="1"
                android:textSize="25sp" />

            <ImageButton
                android:id="@+id/addStockQuantity"
                android:layout_width="48sp"
                android:layout_height="48sp"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/add_stock_quantity"
                android:src="@drawable/icon_add" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/removeDesiredQuantity"
                android:layout_width="48sp"
                android:layout_height="48sp"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/remove_desired_quantity"
                android:src="@drawable/icon_remove" />

            <TextView
                android:id="@+id/homeProductDesiredQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semibold"
                android:padding="10sp"
                android:text="1"
                android:textSize="25sp" />

            <ImageButton
                android:id="@+id/addDesiredQuantity"
                android:layout_width="48sp"
                android:layout_height="48sp"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/add_desired_quantity"
                android:src="@drawable/icon_add" />
        </LinearLayout>
    </LinearLayout>