<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/HomeInventoryFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_theme"
    tools:context=".presentation.ShoppingListFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/HomeInventoryToolBar"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="@color/primary_theme"
        android:backgroundTint="#0DFFFFFF"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/inter_semibold"
            android:text="Home Inventory"
            android:textColor="@color/white"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="561dp"
            tools:layout_editor_absoluteY="24dp" />

        <ImageButton
            android:id="@+id/sortButton"
            android:layout_width="48sp"
            android:layout_height="48sp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/sort_button"
            android:src="@drawable/icon_sort"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.appcompat.widget.Toolbar>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HomeInventoryToolBar">

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/inter_semibold"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="Name"
                android:textSize="25sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/inter_semibold"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="Have"
                android:textSize="25sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/inter_semibold"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="Desired"
                android:textSize="25sp" />

        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/secondary_theme" />
    </TableLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/stockHomeInventoryView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <LinearLayout
        android:id="@+id/hiddenProductLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stockHomeInventoryView">

        <!-- ImageView for the arrow icon -->
        <ImageView
            android:id="@+id/hiddenProductArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:contentDescription="Arrow Hidden Product"
            android:src="@drawable/icon_arrow_up" />

        <!-- TextView for the title -->
        <TextView
            android:id="@+id/hiddenProductTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/inter_semibold"
            android:text="Hidden Products"
            android:textSize="25sp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/hiddenHomeInventoryView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hiddenProductLayout"
        android:visibility="gone"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="@color/primary_theme"
        android:visibility="invisible"
        app:backgroundTint="#0DFFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="invisible" />

</androidx.constraintlayout.widget.ConstraintLayout>