...
        android:id="@+id/shoppingList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/icon_paper_line"
        android:title="Shopping Lists" />
    <item
        android:id="@+id/homeInventory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/icon_home_line"
        android:title="Home Inventory" />
    <item
        android:id="@+id/userRequest"
...
